@@ -16,21 +16,21 @@ $data = [
 if($db->fromDatabase("SELECT id FROM users WHERE id=:id",["id"=>1],"@simple") != 1 ){
     $db->insert("users",$data);
 }
+
 $users = $db->fromDatabase("SELECT id,name,email FROM users");
 print_r($users);
 
-//$users = Pachel\dbClass::instance()->fromDatabase("SELECT id,name,email FROM users");
 $users = $db->fromDatabase("SELECT id,name,email FROM users");
 print_r($users);
 
 
 $user = $db->getModell("users");
-
-//print_r($user->get_all());
-
-//$user->insert($data);
-
-
 print_r($user->get_by_id(1));
 
+
+$params = [
+    "name" => "toth"
+];
+$result = $db->fromDatabase("SELECT * FROM users WHERE name LIKE :name OR name LIKE :name OR name LIKE :name",$params);
+print_r($result);
 
