@@ -1,1 +1,3 @@
 1.1 (2019-06-14)
+    - new intern function check_params()
+    - new externe function delete()
